<resources>
    <string name="app_name" translatable="false">Safe Driver</string>
    <string name="app_splash" translatable="false">S a f e D r i v e r</string>
    <string name="back_pressed_finish">Please press back again to quit</string>
    <string name="api_key_map" translatable="false">AIzaSyBOD5-j2ElNi1GuIbPEZntT1iNLHKassW4</string>

    <!--Setting-->
    <string name="setting_language">Languages</string>
    <string name="setting_policy">Privacy Policy</string>
    <string name="setting_en">English</string>
    <string name="setting_vi">Vietnamese</string>
    <string name="setting_it">Italian</string>
    <string name="setting_spain">Spanish</string>
    <string name="setting_hindi">Hindi</string>
    <string name="setting_china">China</string>
    <string name="setting_russian">Russian</string>
    <string name="setting_bengal">Bengal</string>
    <string name="setting_japan">Japan</string>
    <string name="setting_marathi">Marathi</string>
    <string name="setting_telugu">Telugu</string>
    <string name="setting_turkish">Turkish</string>
    <string name="setting_tamil">Tamil</string>
    <string name="setting_korea">Korea</string>
    <string name="setting_italian">Italian</string>
    <string name="setting_thailand">Thailand</string>
    <string name="setting_pt">Portuguese</string>
    <string name="setting_de">German</string>
    <string name="setting_fr">French</string>
    <string name="view">View</string>
    <string name="your_friend">\"Your friend \"</string>
    <string name="visit_app">\" wants you to check out our app!. Visit us at: \"</string>
    <string name="choose_way_share">Choose a way to share:</string>
    <string name="rate_app">Rate app</string>
    <string name="share_us">Share Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_users">Term of Users</string>
    <string name="version_app">Version App</string>
    <string name="language">Language</string>

    <!--No Internet-->
    <string name="no_internet">Your internet connection is not working. Please check your network and try to connect again.</string>
    <string name="connect">Connect</string>

    <!-- Onboarding -->
    <string name="the_action_may_contain_advertising">The action may contain advertising</string>
    <string name="ob1_title">Trendy Wallpapers</string>
    <string name="ob2_title">Personalize Wallpaper Creation</string>
    <string name="ob3_title">Set Wallpaper</string>
    <string name="ob4_title">Many interesting Categories</string>
    <string name="ob1_description">Explore hot trend wallpapers and real-time updates. Choose and download images you love.</string>
    <string name="ob2_description">Customize your wallpaper using unique creation tools. Design wallpapers to your liking.</string>
    <string name="ob3_description">Easily set your favorite wallpaper on your phone. Change your wallpaper anytime you want.</string>
    <string name="ob4_description">Let\'s explore 4k wallpapers with our hot themes now.</string>
    <string name="next">Next</string>
    <string name="get_started_btn">Get Started</string>

    <!-- App-->
    <string name="congratulations">Congratulations</string>
    <string name="success_installing_text">You have successfully installed this</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="top_trending">Top Trending</string>
    <string name="view_all">View All</string>
    <string name="latest">Latest</string>
    <string name="_4k_wallpaper">4K Wallpaper</string>
    <string name="application_update">Application Updates</string>
    <string name="your_are_has_new">Your app has a new updated version \n Please update for a better experience</string>
    <string name="update_now">Update now!</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="like">Like:</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="calendar">Calendar</string>
    <string name="txt_continue">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="choose_your_favorite_categories">Choose your favorite categories.</string>
    <string name="an_error_has_occurred_when_install_this_wallpaper_please_try_again_later">An error has occurred when installing this wallpaper, please try again later!</string>
    <string name="set_wallpaper">Set wallpaper successfully.</string>
    <string name="favourite">Favourite</string>
    <string name="category">Category</string>
    <string name="exit_title">Exit App</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home_amp_lock_screen"><![CDATA[Home & Lock Screen]]></string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="set_wallpaper_btn">Set Wallpaper</string>
    <string name="galaxy">Galaxy</string>
    <string name="wallpapers">" wallpapers"</string>
    <string name="watch_an_ads">Watch an ADS</string>
    <string name="load_ads_fail">load ads fail</string>
    <string name="you_can_view_and_set">You can view and set this wallpaper by watching an ad! Ready?</string>
    <string name="hello_friend">Hello friend</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password ?</string>
    <string name="total_income">Total income</string>
    <string name="number_of_times_set">Number of times set</string>
    <string name="latest_request">Latest request</string>
    <string name="hello">Hello</string>
    <string name="start_location">Start location</string>
    <string name="end_location">End location</string>
    <string name="accept">Accept</string>
    <string name="moving">Moving</string>
    <string name="note">Note : </string>
    <string name="good_moring">Good morning</string>
    <string name="by_km">By km</string>
    <string name="hourly">Hourly</string>
    <string name="recent_history">Recent history</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="time">Time</string>
    <string name="trip">Trip</string>
    <string name="change">Change</string>
    <string name="rates">Rates: </string>
    <string name="distance">Distance: </string>
    <string name="book">Book</string>
    <string name="your_GPS">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="error">Error</string>
    <string name="profile">Profile</string>
    <string name="car_model">Car model : </string>
    <string name="range_car">Range of vehicle : </string>
    <string name="age">Age: </string>
    <string name="scroll_to_the_customer_and_press_start_trip">Scroll to the customer and press start trip</string>
    <string name="complete">Complete</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="newbie">Newbie ? </string>
    <string name="register_here">Register here</string>
    <string name="login">Login</string>
    <string name="create_free">Create a free account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="already_a_member">Already a member ?</string>
    <string name="account_authentication">Account authentication</string>
    <string name="please_enter_the_6_digit_code_sent">Please enter the 6-digit code sent Email %s for verification.</string>
    <string name="haven_received_any_codes_yet">Haven\'t received any codes yet?</string>
    <string name="resend_the_code">Resend the code</string>
    <string name="verification">Verification</string>
    <string name="otp_does_not_match">Otp does not match</string>
    <string name="register_sccess">Register success</string>
    <string name="select_your_vehicle_type_to_continue">Select your vehicle type to continue</string>
    <string name="ok">Ok</string>
    <string name="rent_for">Rent for</string>
    <string name="allow_app_to_access_device_location">Allow  to access this device’s location?</string>
    <string name="driver_reviews">Driver reviews</string>
    <string name="vote">Vote</string>
    <string name="waiting_for_the_driver">waiting for the driver</string>
    <string name="your_current_location">Your current location</string>
    <string name="intend_time">Intend time: </string>
    <string name="cancel_trip">Do you want to cancel the trip?</string>
    <string name="invalidate_password">Password must contain both numbers and letters and be greater than 4 characters</string>
    <string name="missing_data">missing data</string>
    <string name="evaluate">Evaluate</string>
    <string name="save">Save</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="saved_fail">Save fail</string>

    <string-array name="typeCar">
        <item>Automatic transmission</item>
        <item>Manual transmission</item>
    </string-array>



    <string-array name="car">
        <item>Hyundai Grand i10</item>
        <item>Kia Morning</item>
        <item>VinFast Fadil</item>
        <item>Suzuki Celerio</item>
        <item>Honda Brio</item>
        <item>Toyota Vios</item>
        <item>Hyundai Accent </item>
        <item>Mitsubishi Xpander</item>
        <item>Ford Ranger</item>
        <item>Honda City</item>
        <item>Toyota Corolla Altis</item>
        <item>Mazda3</item>
        <item>Kia Cerato</item>
        <item>Hyundai Elantra</item>
        <item>Toyota Camry</item>
        <item>Honda Accord</item>
        <item>Mazda6</item>
        <item>Kia Optima</item>
        <item>Hyundai Sonata</item>
        <item>Honda Civic</item>
    </string-array>

    <string-array name="hour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
