<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_login_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/register_here"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imgTop"
            app:layout_constraintTop_toTopOf="@+id/imgTop" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/create_free"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tvHello"
            app:layout_constraintStart_toStartOf="@id/tvHello"
            app:layout_constraintTop_toBottomOf="@id/tvHello" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:background="@drawable/bg_radius_16"
            android:backgroundTint="#33C4C4C4"
            android:drawableEnd="@drawable/ic_person_registor"
            android:hint="@string/full_name"
            android:padding="16dp"
            android:textColor="#CC000000"
            android:textColorHint="#80000000"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/imgTop" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_radius_16"
            android:backgroundTint="#33C4C4C4"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/your_email"
            android:padding="16dp"
            android:textColor="#CC000000"
            android:textColorHint="#80000000"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/edtName"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_radius_16"
            android:backgroundTint="#33C4C4C4"
            android:drawableEnd="@drawable/ic_phone_registor"
            android:hint="@string/phone_number"
            android:padding="16dp"
            android:textColor="#CC000000"
            android:textColorHint="#80000000"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/edtEmail" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_radius_16"
            android:backgroundTint="#33C4C4C4"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#CC000000"
            android:textColorHint="#80000000"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/edtPhone" />

        <ImageView
            android:id="@+id/imgEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_eye"
            android:layout_marginEnd="17dp"
            app:layout_constraintEnd_toEndOf="@id/edtPassword"
            app:layout_constraintTop_toTopOf="@id/edtPassword"
            app:layout_constraintBottom_toBottomOf="@id/edtPassword"/>

        <ImageView
            android:id="@+id/imgEyeGone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/visibility_off"
            android:layout_marginEnd="17dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/edtPassword"
            app:layout_constraintTop_toTopOf="@id/edtPassword"
            app:layout_constraintBottom_toBottomOf="@id/edtPassword"/>

        <TextView
            android:id="@+id/tvValidatePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="@id/edtPassword"
            android:gravity="center"
            android:text="@string/invalidate_password"
            android:textColor="#E60000"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/edtPassword"
            app:layout_constraintTop_toBottomOf="@id/edtPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_radius_12"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="#6C63FF"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            app:layout_constraintBottom_toTopOf="@id/lnBottom" />

        <LinearLayout
            android:id="@+id/lnBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_a_member"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/login"
                android:textColor="#6C63FF"
                android:textSize="13sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>