<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_radius_30_top"
        android:backgroundTint="@color/naviColor1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/btn_lock_wallpaper"
            style="@style/NormalTextButton1Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/lock_screen"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/naviColor2" />

        <TextView
            android:id="@+id/btn_home_wallpaper"
            style="@style/NormalTextButton1Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/home_screen"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/naviColor2" />

        <TextView
            android:id="@+id/btn_home_and_lock_wallpaper"
            style="@style/NormalTextButton1Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/home_amp_lock_screen"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>