<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_radius_16"
            android:backgroundTint="@color/navi1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/headingH3Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_title"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/NormalTextButton2Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/do_you_really_want_to_exit"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_exit_yes"
                    style="@style/NormalTextButton1Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_exit_btn"
                    android:padding="16dp"
                    android:textAllCaps="true"
                    android:text="@string/yes"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_exit_no"
                    style="@style/NormalTextButton1Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_exit_btn"
                    android:padding="16dp"
                    android:textAllCaps="true"
                    android:text="@string/no"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>
